--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "gh-pages": "2.1.1",
+    "cypress": "^3.8.1",
     "husky": "3.1.0",
     "lint-staged": "9.5.0",
     "prettier": "1.19.1",
