--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "typescript": "3.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --passWithNoTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix:code": "yarn prettier -- --write",
+    "fix": "yarn fix:code && yarn fix:other",
+    "prettier": "prettier \"**/*.{js,css,scss,json,md,ts,tsx,html,yml}\"",
+    "start": "react-scripts start",
+    "test:app": "react-scripts test --env=jsdom --passWithNoTests",
+    "test:code": "yarn prettier -- --list-different",
+    "test": "npm run test:code && npm run test:app"
   },
   "browserslist": [
     ">0.2%",
@@ -45,7 +50,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,json,md,ts,tsx}": [
+    "*.{js,css,scss,json,md,ts,tsx,html,yml}": [
       "prettier --write",
       "git add"
     ],
