--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "fix:code": "yarn prettier -- --write",
-    "fix": "yarn fix:code && yarn fix:other",
+    "fix": "npm run prettier -- --write",
     "prettier": "prettier \"**/*.{js,css,scss,json,md,ts,tsx,html,yml}\"",
     "start": "react-scripts start",
     "test:app": "react-scripts test --env=jsdom --passWithNoTests",
-    "test:code": "yarn prettier -- --list-different",
+    "test:code": "npm run prettier -- --list-different",
     "test": "npm run test:code && npm run test:app"
   },
   "browserslist": [
