--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,7 +3,25 @@ name: Node CI
 on: [push]
 
 jobs:
-  build:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Setup Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: Install and lint
+        run: |
+          npm ci
+          npm test:code
+        env:
+          CI: true
+
+  test:
     runs-on: ubuntu-latest
 
     steps:
