don't lint against console.info

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         {
           "allow": [
             "warn",
-            "error"
+            "error",
+            "info"
           ]
         }
       ]
