Pining enzyme dependencies

--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "description": "",
   "devDependencies": {
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/enzyme": "3.10.4",
+    "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/jest": "24.9.1",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.19",
     "@types/react-color": "3.0.1",
     "@types/react-dom": "16.9.5",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "eslint-plugin-json-format": "2.0.1",
     "husky": "4.2.1",
     "lint-staged": "10.0.2",
