--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
   },
   "description": "",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^4.1.1",
+    "@types/cypress-image-snapshot": "^3.1.2",
     "@types/jest": "25.1.0",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "cypress": "^3.8.3",
+    "cypress-image-snapshot": "^3.1.1",
     "husky": "4.2.1",
     "lint-staged": "10.0.3",
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
     "rewire": "4.0.1",
+    "ts-loader": "^6.2.1",
     "typescript": "3.7.5"
   },
   "eslintConfig": {
@@ -59,7 +64,8 @@
     "start": "react-scripts start",
     "test": "npm run test:app",
     "test:app": "react-scripts test --env=jsdom --passWithNoTests",
-    "test:code": "npm run prettier -- --list-different"
+    "test:code": "npm run prettier -- --list-different",
+    "cypress:open": "cypress open"
   },
   "version": "1.0.0",
   "license": "MIT",
