--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "test:app": "react-scripts test --env=jsdom --passWithNoTests",
     "test:code": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test:other": "npm run prettier -- --list-different",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress run"
   },
   "version": "1.0.0",
   "license": "MIT",
