reintroduce no-else-return rule

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
           ]
         }
       ],
+      "no-else-return": "warn",
       "no-useless-return": "warn",
       "prefer-const": [
         "warn",
