--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "description": "",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
     "@types/jest": "25.1.1",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.19",
@@ -29,6 +31,11 @@
     "prettier": "1.19.1",
     "rewire": "4.0.1",
     "typescript": "3.7.5"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(roughjs|browser-nativefs)/)"
+    ]
   },
   "eslintConfig": {
     "extends": [
