--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,7 +21,7 @@ jobs:
           wait-on: "http://localhost:3000"
           # If screenshot snapshots are failing add
           # the following to ignore them:
-          env: failOnSnapshotDiff=false
+          # env: failOnSnapshotDiff=false
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
