--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.1",
-    "jest-canvas-mock": "^2.2.0",
+    "jest-canvas-mock": "2.2.0",
     "lint-staged": "10.0.7",
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
