--- a/package.json
+++ b/package.json
@@ -96,6 +96,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/excalidraw/excalidraw.git"
+    "url": "https://github.com/nrgapple/excalidraw.git"
   }
 }
