--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "react-dom": "16.13.0",
     "react-scripts": "3.4.0",
     "roughjs": "4.0.4",
+    "socket.io-client": "2.3.0",
     "stacktrace-js": "2.0.2"
   },
   "devDependencies": {
-    "asar": "2.1.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "9.4.1",
     "@types/jest": "25.1.3",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "@types/socket.io-client": "1.4.32",
+    "asar": "2.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
