--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "browser-nativefs": "0.3.1",
     "i18next-browser-languagedetector": "4.0.2",
+    "lodash.throttle": "4.1.1",
     "nanoid": "2.1.11",
     "react": "16.13.0",
     "react-dom": "16.13.0",
@@ -20,6 +21,7 @@
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "9.4.1",
     "@types/jest": "25.1.3",
+    "@types/lodash.throttle": "4.1.6",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
