--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
   "dependencies": {
     "browser-nativefs": "0.3.1",
     "i18next-browser-languagedetector": "4.0.2",
+    "lodash.throttle": "4.1.1",
     "nanoid": "2.1.11",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-scripts": "3.4.0",
     "roughjs": "4.0.4",
+    "socket.io-client": "2.3.0",
     "stacktrace-js": "2.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "9.4.1",
     "@types/jest": "25.1.3",
+    "@types/lodash.throttle": "4.1.6",
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "@types/socket.io-client": "1.4.32",
     "asar": "2.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
