--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "pepjs": "0.5.2",
     "prettier": "1.19.1",
     "rewire": "5.0.0",
-    "typescript": "3.8.3"
+    "ts-loader": "6.2.1",
+    "typescript": "3.8.3",
+    "webpack-cli": "3.3.11"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
   },
   "jest": {
     "transformIgnorePatterns": [
@@ -80,12 +86,14 @@
       "pre-commit": "lint-staged"
     }
   },
-  "main": "src/index.js",
+  "main": "dist/excalidraw.js",
   "name": "excalidraw",
   "scripts": {
+    "prepare": "npm run build:lib",
     "build:app": "react-scripts build",
     "build:zip": "node ./scripts/build-version.js",
-    "build": "npm run build:app && npm run build:zip",
+    "build:lib": "webpack --config webpack.library.config --mode production",
+    "build": "npm run build:app && npm run build:zip && npm run build:lib",
     "build-node": "node ./scripts/build-node.js",
     "eject": "react-scripts eject",
     "fix": "npm run fix:other && npm run fix:code",
@@ -108,5 +116,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
