--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"
+    "not op_mini all",
+    "not safari < 12",
+    "not kaios <= 2.5",
+    "not edge < 79",
+    "not chrome < 70",
+    "not and_uc < 13",
+    "not samsung < 10"
   ],
   "dependencies": {
     "browser-nativefs": "0.4.0",
