--- a/package.json
+++ b/package.json
@@ -80,8 +80,7 @@
       "pre-commit": "lint-staged"
     }
   },
-  "main": "src/index.js",
-  "name": "excalidraw",
+  "private": true,
   "scripts": {
     "build:app": "react-scripts build",
     "build:zip": "node ./scripts/build-version.js",
@@ -99,12 +98,6 @@
     "test:code": "eslint --max-warnings=0 --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test:typecheck": "tsc",
     "test:other": "npm run prettier -- --list-different"
-  },
-  "version": "1.0.0",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/excalidraw/excalidraw.git"
   },
   "engines": {
     "node": ">=12.0.0"
