--- a/now.json
+++ b/now.json
@@ -1,8 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/(.*)",
-      "destination": ""
+      "source": "/(...*)",
+      "destination": "/"
     }
   ]
 }
