--- a/now.json
+++ b/now.json
@@ -2,7 +2,8 @@
   "redirects": [
     {
       "source": "/([^.]+)",
-      "destination": "/"
+      "destination": "/",
+      "statusCode": 301
     }
   ]
 }
