Add feature policy (#1202)
Co-authored-by: Lipis <lipiridis@gmail.com>

--- a/now.json
+++ b/now.json
@@ -8,6 +8,10 @@
           "value": "nosniff"
         },
         {
+          "key": "Feature-Policy",
+          "value": "*"
+        },
+        {
           "key": "Referrer-Policy",
           "value": "origin"
         }
