--- a/now.json
+++ b/now.json
@@ -4,6 +4,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
