--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,10 @@
 root = true
 
 [*]
-indent_style = space
+[*]
 charset = utf-8
-
-[*.{ts,tsx,js,json}]
-indent_size = 2
 end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
