--- a/now.json
+++ b/now.json
@@ -18,6 +18,10 @@
         {
           "key": "Referrer-Policy",
           "value": "origin"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src https: "
         }
       ]
     }
