--- a/now.json
+++ b/now.json
@@ -21,7 +21,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src https: data: 'unsafe-inline'"
+          "value": "default-src https:; script-src 'unsafe-inline'; img-src data:"
         }
       ]
     }
