Prefer arrow callbacks

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
       ],
       "no-else-return": "warn",
       "no-useless-return": "warn",
+      "prefer-arrow-callback": "warn",
       "prefer-const": [
         "warn",
         {
