Prefer arrow function

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "asar": "3.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prefer-arrow": "1.1.7",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.3",
     "jest-canvas-mock": "2.2.0",
@@ -59,7 +60,8 @@
       "react-app"
     ],
     "plugins": [
-      "prettier"
+      "prettier",
+      "prefer-arrow"
     ],
     "rules": {
       "curly": "warn",
@@ -75,6 +77,14 @@
       ],
       "no-else-return": "warn",
       "no-useless-return": "warn",
+      "prefer-arrow/prefer-arrow-functions": [
+        "warn",
+        {
+          "disallowPrototype": true,
+          "singleReturnOnly": true,
+          "classPropertiesAllowed": false
+        }
+      ],
       "prefer-arrow-callback": "warn",
       "prefer-const": [
         "warn",
