--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
       ],
       "no-else-return": "warn",
       "no-useless-return": "warn",
-      "prefer-arrow/prefer-arrow-functions": "warn",
+      "prefer-arrow/prefer-arrow-functions": [
+        "warn",
+        {}
+      ],
       "prefer-arrow-callback": "warn",
       "prefer-const": [
         "warn",
