--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-nativefs": "0.4.0",
     "i18next-browser-languagedetector": "4.0.2",
     "nanoid": "2.1.11",
+    "pako": "1.0.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
@@ -34,6 +35,7 @@
     "@testing-library/react": "10.0.1",
     "@types/jest": "25.1.4",
     "@types/nanoid": "2.1.0",
+    "@types/pako": "1.0.1",
     "@types/react": "16.9.27",
     "@types/react-dom": "16.9.5",
     "@types/socket.io-client": "1.4.32",
