--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
       "last 1 safari version"
     ]
   },
+  "peerDependencies": {
+    "@sentry/browser": "^5.15.4",
+    "@sentry/integrations": "^5.15.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "dependencies": {
-    "@sentry/browser": "5.15.4",
-    "@sentry/integrations": "5.15.4",
-    "browser-nativefs": "0.7.0",
+    "browser-nativefs": "0.6.0",
     "i18next-browser-languagedetector": "4.0.2",
     "nanoid": "2.1.11",
     "open-color": "1.7.0",
     "pwacompat": "2.0.11",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
     "roughjs": "4.1.4",
     "socket.io-client": "2.3.0"
   },
   "devDependencies": {
+    "@sentry/browser": "5.15.4",
+    "@sentry/integrations": "5.15.4",
     "@testing-library/jest-dom": "5.5.0",
     "@testing-library/react": "10.0.2",
     "@types/jest": "25.2.1",
@@ -50,6 +54,8 @@
     "node-sass": "4.13.1",
     "pepjs": "0.5.2",
     "prettier": "2.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "rewire": "5.0.0",
     "typescript": "3.8.3"
   },
