--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "excalidraw",
+  "files": [
+    "dist/excalidraw.min.js"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,19 +49,26 @@
     "@types/react-dom": "16.9.6",
     "@types/socket.io-client": "1.4.32",
     "asar": "3.0.3",
+    "css-loader": "3.5.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.3",
     "husky": "4.2.5",
     "jest-canvas-mock": "2.2.0",
     "lint-staged": "10.1.3",
+    "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.13.1",
     "pepjs": "0.5.2",
     "prettier": "2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "rewire": "5.0.0",
-    "typescript": "3.8.3"
+    "sass-loader": "8.0.2",
+    "terser-webpack-plugin": "2.3.5",
+    "ts-loader": "7.0.0",
+    "typescript": "3.8.3",
+    "webpack-cli": "3.3.11",
+    "webpack": "4.42.0"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -131,6 +142,7 @@
     "test:code": "eslint --max-warnings=0 --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "test:other": "npm run prettier -- --list-different",
-    "test:typecheck": "tsc"
+    "test:typecheck": "tsc",
+    "build:umd": "NODE_ENV=production webpack --config webpack.prod.config.js"
   }
 }
