--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-browser-languagedetector": "4.0.2",
     "nanoid": "2.1.11",
     "open-color": "1.7.0",
+    "quill": "1.3.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
@@ -39,6 +40,7 @@
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/socket.io-client": "1.4.32",
+    "@types/quill": "1.3.10",
     "asar": "3.0.3",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
