Commiting canvas in package.json so that build completes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/browser": "5.15.4",
     "@sentry/integrations": "5.15.4",
     "browser-nativefs": "0.7.1",
+    "canvas": "2.6.1",
     "i18next-browser-languagedetector": "4.1.1",
     "nanoid": "2.1.11",
     "open-color": "1.7.0",
